<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="30dp"
    app:cardPreventCornerOverlap="false"
    android:layout_margin="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="49dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/offer_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/offer_s_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorBackground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="49dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:srcCompat="@drawable/ic_money" />

        <TextView
            android:id="@+id/offer_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/offer_s_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorBackground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="49dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:srcCompat="@drawable/ic_pin" />

        <TextView
            android:id="@+id/offer_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/offer_s_location"
            android:textColor="@color/colorBackground"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />

        <TextView
            android:id="@+id/offer_jurisdiction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/offer_s_jurisdiction"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBackground"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offer_location" />

        <TextView
            android:id="@+id/offer_offerer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/offer_s_offerer"
            android:textColor="@color/colorBackground"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offer_jurisdiction" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>